# virHEAT

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
example_data/example_mave_data/input/: MaveExpRBD.csv  sample-04.vcf  sample-05.vcf  sample-06.vcf  sample-09.vcf  sample-11.vcf
example_mave_data/: MaveBindRBD.csv  sample-01.vcf  sample-02.vcf  sample-03.vcf  sample-07.vcf  sample-08.vcf  sample-10.vcf  sample-12.vcf
virheat/: __init__.py  command.py  virheat.py
virheat/scripts/: data_prep.py  plotting.py
