[build-system]
requires = ["setuptools >= 65", "wheel >= 0.38"]
build-backend = "setuptools.build_meta"

[project]
name = 'virheat'
version = '0.7.5'
description = 'virHEAT creates a heatmap from vcf files and maps positions on to a reference genome.'
keywords = ['vcf, snp, evolution']
dependencies = ['matplotlib>=3.5.1', 'numpy>=1.23.3', 'pandas>=1.4.4']
requires-python = '>=3.9'
authors = [{name = 'Jonas Fuchs', email = 'jonas.fuchs@uniklinik-freiburg.de'}]
maintainers = [{name = 'Jonas Fuchs', email = 'jonas.fuchs@uniklinik-freiburg.de'}]
readme = 'README.md'
license = {file = 'LICENSE'}
classifiers = [
    'Programming Language :: Python :: 3.9',
    'Operating System :: OS Independent',
]

[project.scripts]
virheat = "virheat.command:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ['virheat']
namespaces = false
